# ml_prod

./: .env  collection.py  model_service.py  pyproject.toml  runner.py
.github/workflows/: workflow.yml
src/: config.py  db_model.py  model.py  preparation.py  runner.py
src/config/: .env  config.py
src/db/: db_model.py
src/model/: model_service.py
src/model/models/: rf_v1
src/model/pipeline/: collection.py  model.py  preparation.py
